# secrets-injector

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml
.github/: dependabot.yml
.github/workflows/: dockerimage.yml  dockerpublish.yml  rust.yml
docs/: CONTRIBUTING.md
examples/kubernetes/vault/: configmap.yaml  deployment.yaml
examples/kubernetes/vault/helm/: cluster-keys.json
src/: config.rs  environment.rs  main.rs  mytest.rs  provider.rs
src/provider/: parameter_store.rs  vault.rs
