[package]
name = "secrets-injector"
version = "0.1.0"
authors = ["Rodrigo Oliveira <rodrigo.dealer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashicorp_vault = "1.0.0"
rusoto_secretsmanager = "0.43.0"