[package]
name = "secrets-injector"
version = "0.1.0"
authors = ["Rodrigo Oliveira <rodrigo.dealer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashicorp_vault = "1.1.0"
rusoto_secretsmanager = "0.43.0"
serde_derive = "1.0.106"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
mocktopus = "0.7.0"


